--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,10 @@
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
 include ':ActiveLookSDK'
 include ':app'
-rootProject.name = "My Active Look Application"
+rootProject.name = "Active Look SDK"
