--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,6 @@ dependencyResolutionManagement {
     }
 }
 include ':ActiveLookSDK'
-include ':app'
+include ':debugapp'
+include ':demoapp'
 rootProject.name = "Active Look SDK"
