--- a/ActiveLookSDK/build.gradle
+++ b/ActiveLookSDK/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
@@ -45,16 +46,22 @@ task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
 
-artifacts {
-    archives sourcesJar
-    archives javadocJar
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                artifact sourcesJar
+                artifact javadocJar
+            }
+        }
+    }
 }
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
 
     implementation 'com.google.android.material:material:1.4.0'
-
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
