--- a/ActiveLookSDK/src/main/AndroidManifest.xml
+++ b/ActiveLookSDK/src/main/AndroidManifest.xml
@@ -16,4 +16,6 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <application android:usesCleartextTraffic='true' />
+
 </manifest>
