add kotlin dependency

--- a/ActiveLookSDK/build.gradle
+++ b/ActiveLookSDK/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
     id 'maven-publish'
 }
 
@@ -25,6 +27,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 }
 
@@ -63,6 +68,8 @@ afterEvaluate {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.core:core-ktx:+'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version'
 
     implementation 'com.google.android.material:material:1.4.0'
 
