--- a/ActiveLookSDK/build.gradle
+++ b/ActiveLookSDK/build.gradle
@@ -68,7 +68,7 @@ afterEvaluate {
 
 dependencies {
     implementation "androidx.appcompat:appcompat:1.4.1"
-    implementation "androidx.core:core-ktx:+"
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation "com.google.android.material:material:1.5.0"
