--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.sdkGroupId = "com.activelook"
+    ext.sdkVersionCode = 420
+    ext.sdkVersionName = '4.2.0'
     ext.kotlin_version = '1.6.20'
     repositories {
         google()
