--- a/ActiveLookSDK/build.gradle
+++ b/ActiveLookSDK/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-parcelize'
-    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
+    id 'org.jetbrains.kotlin.plugin.serialization' version "$kotlin_version"
     id 'maven-publish'
 }
 
